[package]
name = "expo-server-sdk"
version = "0.1.0"
authors = ["quin <quin@expo.io>"]
description = "Server side library for working with Expo using Rust. Includes a client to send push notifications to users of your mobile app using the Expo push notification services."
homepage = "https://docs.expo.io"
license = "MIT"
readme = "README.md"
keywords = ["expo", "push notifications", "react native"]
categories = ["api-bindings", "web-programming"]
documentation = "..."
repository = "..."

[lib]
name = "expo_server_sdk"
path = "src/lib.rs"

[[bin]]
name = "expo-server"
path = "src/main.rs"
doc = false

[dependencies]
reqwest = "0.8"
serde_json = "1"
serde_derive = "1"
serde = "1"
failure = "0.1"
failure_derive = "0.1"
flate2 = "1.0"
clap = {version = "2.31", features = ["yaml"]}
structopt = "0.2"
