[package]
name = "expo-server-sdk"
version = "0.1.0"
edition = "2021"
authors = ["quin <quin@expo.io>"]
description = "Server side library for working with Expo using Rust. Includes a client to send push notifications to users of your mobile app using the Expo push notification services."
homepage = "https://docs.expo.io"
license = "MIT"
readme = "README.md"
keywords = ["expo", "push", "notifications", "react", "native"]
categories = ["api-bindings", "web-programming"]
documentation = "https://docs.expo.io/versions/latest/guides/push-notifications"
repository = "https://github.com/expo/expo-server-sdk-rust"

[dependencies]
reqwest = {version = "0.11.13", features = ["json", "gzip"]}
serde_json = "1"
serde = {version = "1", features = ["derive"]}
failure = "0.1"
failure_derive = "0.1"
flate2 = "1.0"

[dev-dependencies]
tokio = {version = "1.23", features = ["test-util", "macros"]}