[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
expo-server-sdk = {version = "0.2", path = "../"}
serde_json = "1"
tokio = {version = "1", features = ["macros"]}